# minishell

./: .gitmodules  CMakeLists.txt  Makefile  README.md  default.sh  doxygen  fish2shell.py  fortunes  start_shell.sh  token.py  valgrind.supp
completion/: 7z.sh  VBoxHeadless.sh  VBoxSDL.sh  a2disconf.sh  a2dismod.sh  a2dissite.sh  a2enconf.sh  a2enmod.sh  a2ensite.sh  abbr.sh  abook.sh  acat.sh  accept.sh  ack.sh  acpi.sh  actionlint.sh  adb.sh  adduser.sh  age-keygen.sh  age.sh  alias.sh  als.sh  alsactl.sh  alsamixer.sh  alternatives.sh  amixer.sh  and.sh  animate.sh  ansible-galaxy.sh  ansible-playbook.sh  ansible-vault.sh  ansible.sh  ant.sh  apk.sh  apkanalyzer.sh  apt-build.sh  apt-cache.sh  apt-cdrom.sh  apt-config.sh  apt-extracttemplates.sh  (+768 more)
src/builtins/: builtin.c  builtin.h  cd.c  colored.c  colored.h  echo.c  env.c  export.c  fds.c  pwd.c  shopt.c  source.c  type.c  unset.c
src/expansion/: cmdsub.c  expansion.c  expansion.h  filename.c  param.c  tilde.c
src/getline/: action.c  buffer.c  buffer.h  cluster.c  cluster_heuristics.c  cursor.c  delete.c  draw.c  getline.c  getline.h  highlight.c  history.c  input.c  keys.c  lineget.c  move.c  prompt.c  render.c  term.c  util.c
src/lineget/: buffer.c  keys.c  lineget.c  lineget.h
src/parser/: arglist.c  args.c  args.h  ast.c  delimiters.c  main.c  node_block.c  node_command.c  node_for.c  node_function.c  node_if.c  node_list.c  node_logic.c  node_subshell.c  node_while.c  nodes.c  nodes_basic.c  nodes_stmt.c  parse.c  parse2.c  parse_for.c  (+25 more)
tester/: checker.c  files.c  random.c  tester.c  tester.h  util.c
(+327 files in other folders)
